[refactor]: delete unused jar from pom.xml