@@ -1,16 +1,13 @@
 package ecnu.db.generator.constraintchain.filter.operation;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.google.common.collect.Multimap;
-import com.google.common.collect.Multimaps;
 import ecnu.db.generator.constraintchain.filter.BoolExprNode;
 import ecnu.db.generator.constraintchain.filter.BoolExprType;
 import ecnu.db.generator.constraintchain.filter.Parameter;
 import ecnu.db.schema.ColumnManager;
 
 import java.math.BigDecimal;
-import java.util.Collection;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -21,7 +18,7 @@ import java.util.stream.Stream;
 @JsonIgnoreProperties(ignoreUnknown = true)
 public class UniVarFilterOperation extends AbstractFilterOperation {
     protected String canonicalColumnName;
-    private Boolean hasNot = false;
+    private boolean hasNot = false;
 
     public UniVarFilterOperation() {
         super(null);
@@ -35,19 +32,24 @@ public class UniVarFilterOperation extends AbstractFilterOperation {
     /**
      * merge operation
      */
-    public static void merge(List<BoolExprNode> toMergeNodes, Multimap<String, UniVarFilterOperation> col2uniFilters, boolean isAnd) {
-        for (String colName : col2uniFilters.keySet()) {
-            Collection<UniVarFilterOperation> filters = col2uniFilters.get(colName);
-            Multimap<CompareOperator, UniVarFilterOperation> typ2Filter = Multimaps.index(filters, AbstractFilterOperation::getOperator);
+    public static void merge(List<BoolExprNode> toMergeNodes, Map<String, Collection<UniVarFilterOperation>> col2uniFilters, boolean isAnd) {
+        for (var col2uniFilter : col2uniFilters.entrySet()) {
+            Collection<UniVarFilterOperation> filters = col2uniFilter.getValue();
+            Map<CompareOperator, List<UniVarFilterOperation>> typ2Filter = filters.stream()
+                    .map(filter -> new AbstractMap.SimpleEntry<>(filter.getOperator(), filter))
+                    .collect(Collectors.groupingBy(AbstractMap.SimpleEntry::getKey,
+                            Collectors.mapping(AbstractMap.SimpleEntry::getValue, Collectors.toList())));
             if (typ2Filter.size() == 1) {
-                toMergeNodes.addAll(typ2Filter.values());
+                toMergeNodes.addAll(typ2Filter.values().stream().flatMap(Collection::stream).toList());
                 continue;
             }
-            RangeFilterOperation newFilter = new RangeFilterOperation(colName);
-            newFilter.addLessParameters(Stream.concat(typ2Filter.get(CompareOperator.LE).stream(), typ2Filter.get(CompareOperator.LT).stream())
-                    .flatMap((filter) -> filter.getParameters().stream()).collect(Collectors.toList()));
-            newFilter.addGreaterParameters(Stream.concat(typ2Filter.get(CompareOperator.GE).stream(), typ2Filter.get(CompareOperator.GT).stream())
-                    .flatMap((filter) -> filter.getParameters().stream()).collect(Collectors.toList()));
+            RangeFilterOperation newFilter = new RangeFilterOperation(col2uniFilter.getKey());
+            newFilter.addLessParameters(Stream.concat(typ2Filter.getOrDefault(CompareOperator.LE, new ArrayList<>()).stream(),
+                            typ2Filter.getOrDefault(CompareOperator.LT, new ArrayList<>()).stream())
+                    .flatMap((filter) -> filter.getParameters().stream()).toList());
+            newFilter.addGreaterParameters(Stream.concat(typ2Filter.getOrDefault(CompareOperator.GE, new ArrayList<>()).stream(),
+                            typ2Filter.getOrDefault(CompareOperator.GT, new ArrayList<>()).stream())
+                    .flatMap((filter) -> filter.getParameters().stream()).toList());
             newFilter.setLessOperator(isAnd, typ2Filter);
             newFilter.setGreaterOperator(isAnd, typ2Filter);
             toMergeNodes.add(newFilter);
@@ -59,11 +61,11 @@ public class UniVarFilterOperation extends AbstractFilterOperation {
         return BoolExprType.UNI_FILTER_OPERATION;
     }
 
-    public Boolean getHasNot() {
+    public boolean getHasNot() {
         return hasNot;
     }
 
-    public void setHasNot(Boolean hasNot) {
+    public void setHasNot(boolean hasNot) {
         this.hasNot = hasNot;
     }
 
